--- a/index.html
+++ b/index.html
@@ -4,33 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
-    <style>
-      body {
-        margin: 0;
-      }
-
-      h1 {
-        font-size: 80px;
-        color: white;
-      }
-      .winner {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        z-index: 10;
-        position: absolute;
-        width: 100vw;
-        height: 100vh;
-      }
-      .hidden {
-        display: none;
-      }
-    </style>
+    <link href="./style.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="winner hidden">
-      <h1>You Won!</h1>
+    <header><button onclick="showHelp()">Help</button></header>
+    <div class="container">
+      <div class="winner hidden">
+        <h1>You Won!</h1>
+        <button onclick="playAgain()">Play again!</button>
+      </div>
+      <div id="maze"></div>
+      <div class="help">
+        <button class="close" onclick="closeHelp()">X</button>
+        <div class="content">
+          <p>
+            Use 'A' key for moving the ball left, 'D' key for right, 'S' key for
+            down and 'W' key for up.
+          </p>
+          <p>You win when the ball hits the green rectangle.</p>
+        </div>
+      </div>
     </div>
+
     <script src="index.js"></script>
   </body>
 </html>
